# yandex-cloud-billing-analysis-bot

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: main.yml
bot/: __main__.py  config.py  db.py  entrypoint.sh  s3.py  templater.py  test.py  utils.py  yc.py
bot/handlers/: balance.py  callback.py  command.py  daily.py  error.py  help.py  message.py  monthly.py  start.py  unknown.py  validator.py  weekly.py
bot/reports/: common.py  daily.py  groupby.py  monthly.py  weekly.py
bot/sql/: db.sqlite3
bot/templates/: balance.tpl  creating.tpl  error.tpl  help.tpl  product.tpl  selection_prompt.tpl  service.tpl  start.tpl  unauthorized.tpl  wrong_command.tpl
deploy/: .envrc  .terraform.lock.hcl  cloud-init.yaml  compute.tf  output.tf  sg.tf  variables.tf  vpc.tf
src/: _report.py  app.py  main.py  report.py  utils.py
src/handlers/: command.py  error.py  message.py
src/report/: common.py  daily.py  weekly.py
