[tool.poetry]
name = "yandex-cloud-billing-analysis-bot"
version = "1.0.0"
description = ""
authors = ["Leonid Grishenkov <grishenkovleonid@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "2.2.3"
boto3 = "1.35.34"
python-dotenv = "1.0.0"
python-telegram-bot = "21.6"
jinja2 = "3.1.4"
aiosqlite = "0.20.0"
requests = "2.32.3"

[tool.poetry.group.dev.dependencies]
rich = "13.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
